# sane

./: .clang-format  .cmake-format.json  .gitattributes  CMakeLists.txt  README.md  flake.nix  treefmt.toml
.github/workflows/: build.yml  cmake.yml  cpp.yml  style.yml
src/sane/: CMakeLists.txt  integer.cpp  integer.hpp  sane.cpp  sane.hpp
src/sane/detail/: integer.hpp
